player: Fix filter list overflow focus issue on mobile
Seems like scroll: auto considered the space still "visible" if it was
inside the view window. Making it auto does not consider it visible to
scrollIntoView. The implemented fix is to manually call scrollTo on the
parent element with the correct offset.

Apparently it's still an experimental API
https://developer.mozilla.org/en-US/docs/Web/API/Element/scrollIntoView

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -18,7 +18,7 @@ body > .input { z-index: 1; display: block; flex: 1 1 10%; font-size: 3rem; }
 .control-row > .player { flex: 2 1 auto; }
 .control-row p { flex: 1 1 auto; text-align: center; user-select: none; }
 .side-by-side { display: flex; flex: 1 1 90%; overflow: hidden; }
-.included { border-right: 1px solid var(--color-orange); flex: 1 1 50%; padding: 1%; overflow: scroll; }
+.included { border-right: 1px solid var(--color-orange); flex: 1 1 50%; padding: 1%; overflow: auto; }
 .side-by-side > * { background-color: rgba(0, 0, 0, 0.7); }
 .side-by-side p { float: left; clear: left; }
 .side-by-side p:hover { background-color: var(--color-navy); }
